# ContextOS

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.es.md  README.fr.md  README.ko.md  README.md  README.nl.md  README.ru.md  README.zh.md  llms.txt  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  sync-upstream-docs.yml  update-docs-on-push.yml
contextOS/: __init__.py  cognition.py  core.py  indexer.py  memory.py  orchestration.py  planning.py  retrieval.py  router.py  tools.py
docs/: CNAME  index.html  upstream-versions.json
docs/wiki/: Architecture.md  Cognition-Layer.md  Contributing.md  Credits-and-Origins.md  FAQ.md  Home.md  Index-Lifecycle-Manager.md  Integrations.md  MCP-Tools-Reference.md  Pre-Response-Sparring-Hook.md  Retrieval-Router.md  Roadmap.md
